--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -3,26 +3,90 @@ body, html {
     padding: 0;
     margin: 0;
 }
+.container {
+    width: 80%;
+    margin: 0px auto;
+}
 h1, h2, h3, h4, h5, h6 {
-    color: white;
+    color: #10707f;
+    padding-left: 30px;
 }
 .parent {
     display: flex;
 }
-
+.section {
+    border-bottom: 2px solid #15616d;
+    padding: 30px 30px;
+}
+.section h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 4rem;
+}
 .box {
-    width: 150px;
-    height: 150px;
-    border: 2px solid white;
-    background: burlywood;
+    width: 70px;
+    height: 70px;
+    border: 2px solid #267c89;
+    background: #fff;
     padding: 5px;
     margin: 5px;
+}
+.row-direction {
+    display: flex;
+    flex-direction: row;
+}
+.column-direction {
+    display: flex;
+    flex-direction:column;
+}
+.row-reverse-direction {
+    display: flex;
+    flex-direction:row-reverse;
+}
+.column-reverse-direction {
+    display: flex;
+    flex-direction:column-reverse;
+}
+.flex-wrap{
+    display: flex;
+    flex-direction:row;
+    flex-wrap:wrap ;
+}
+.noflex-wrap {
+    display: flex;
+    flex-direction:row;
+    flex-wrap:nowrap;
+}
+.wrap-reverse-nowrap {
+    display: flex;
+    flex-direction:row;
+    flex-wrap:wrap-reverse;
 }
 .codeblock {
     padding: 20px;
     width: 60%;
-    height: 400px;
+    min-height: 100px;
     border: 2px solid #98b7bc;
     background: white;
     display: flex;
+}
+.flex-flow {
+    display: flex;
+    flex-direction:row;
+    flex-wrap:flex row;
+}
+.justify-content-start {
+    display: flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    justify-content: center;
+}
+.align-items{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.arow {
+    color: red;
+    font-size: 100px;;
 }
